--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "ezone",
         "logoapp",
         "logoauth",
-        "signup"
+        "signup",
+        "titlebottomappbar"
     ]
 }
