--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@
     flutter_otp_text_field: ^1.1.1
     awesome_dialog: ^3.0.2
     connectivity_plus: ^3.0.3
+    flutter_svg: ^2.0.4
     
   dev_dependencies:
     flutter_test:
