--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,8 @@
     awesome_dialog: ^3.0.2
     connectivity_plus: ^3.0.3
     flutter_svg: ^2.0.4
-    
+    persistent_bottom_nav_bar: ^5.0.1
+    lottie: ^2.4.0
   dev_dependencies:
     flutter_test:
       sdk: flutter
@@ -108,6 +109,7 @@
     # To add assets to your application, add an assets section, like this:
     assets:
       - assets/images/
+      - assets/lottie/
     #   - images/a_dot_ham.jpeg
 
     # An image asset can refer to one or more resolution-specific "variants", see
