--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,50 @@
 {
     "cSpell.words": [
+        "addressid",
+        "checkemail",
+        "countitems",
+        "countprice",
+        "couponid",
         "customtexttitleauth",
         "dartz",
+        "datacart",
+        "Datetime",
+        "Emad",
         "ezone",
+        "firestore",
+        "getcountitems",
+        "itemsid",
+        "Kyrillos",
         "logoapp",
         "logoauth",
+        "Noterating",
+        "Qrcode",
+        "resetpassword",
         "signup",
-        "titlebottomappbar"
+        "sqflite",
+        "titlebottomappbar",
+        "totalprice",
+        "usersid",
+        "verfiycode",
+        "ابدأ",
+        "استمر",
+        "التتبع",
+        "الخريطة",
+        "الدخول",
+        "الدفع",
+        "انجليزي",
+        "بوابات",
+        "تتبع",
+        "تسجيل",
+        "خلال",
+        "طلبك",
+        "لدينا",
+        "للشراء",
+        "متجرنا",
+        "مرحلة",
+        "منتج",
+        "منتجك",
+        "وامن",
+        "يمكنك"
     ]
 }
