--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@
     flutter_svg: ^2.0.4
     persistent_bottom_nav_bar: ^5.0.1
     lottie: ^2.4.0
+    rating_dialog: ^2.0.3
   dev_dependencies:
     flutter_test:
       sdk: flutter
